force-app/main/default/objects/References__c/References__c.object-meta.xml
<CustomObject>
    <label>References</label>
    <nameField>
        <displayFormat>RID-{00000}</displayFormat>
        <label>Reference Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>