force-app/main/default/objects/References__c/fields/Ability_to_Parent_for_Children_Rating__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Parent_for_Children_Rating__c</fullName>
    <label>Ability to Parent for Children Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>