force-app/main/default/objects/References__c/fields/Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Caregiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caregiver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referencess</relationshipLabel>
    <relationshipName>Referencess</relationshipName>
    <type>Lookup</type>
</CustomField>