force-app/main/default/objects/References__c/fields/Communication_Rating__c.field-meta.xml
<CustomField>
    <fullName>Communication_Rating__c</fullName>
    <label>Communication Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>