force-app/main/default/objects/References__c/fields/Concerns_Description__c.field-meta.xml
<CustomField>
    <fullName>Concerns_Description__c</fullName>
    <label>Describe Concerns (If Any)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>