force-app/main/default/objects/References__c/fields/Date_of_Reference_Check__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Reference_Check__c</fullName>
    <label>Date of Reference Check</label>
    <type>Date</type>
</CustomField>