force-app/main/default/objects/References__c/fields/ESignature_Typed_Name__c.field-meta.xml
<CustomField>
    <fullName>ESignature_Typed_Name__c</fullName>
    <label>E-Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>