force-app/main/default/objects/References__c/fields/Frequency_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Contact__c</fullName>
    <label>Frequency of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Several times a year</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>