force-app/main/default/objects/References__c/fields/How_Long_Have_You_Known_the_Applicant__c.field-meta.xml
<CustomField>
    <fullName>How_Long_Have_You_Known_the_Applicant__c</fullName>
    <label>How Long Have You Known the Applicant?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>