force-app/main/default/objects/References__c/fields/Reliability_Dependability_Rating__c.field-meta.xml
<CustomField>
    <fullName>Reliability_Dependability_Rating__c</fullName>
    <label>Reliability/Dependability Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>