force-app/main/default/objects/References__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Request Date</label>
    <type>DateTime</type>
</CustomField>