force-app/main/default/objects/References__c/fields/Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Review_Outcome__c</fullName>
    <label>Review Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Follow-up Required</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Pending Further Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>