force-app/main/default/objects/References__c/fields/Substance_Concern__c.field-meta.xml
<CustomField>
    <fullName>Substance_Concern__c</fullName>
    <label>Any Substance Misuse Concerns?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>