force-app/main/default/objects/References__c/fields/Support_System_Strength_Rating__c.field-meta.xml
<CustomField>
    <fullName>Support_System_Strength_Rating__c</fullName>
    <label>Support System Strength Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>