force-app/main/default/objects/References__c/fields/Token_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiration__c</fullName>
    <formula>CreatedDate + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Expiration</label>
    <type>DateTime</type>
</CustomField>